--- a/user-manager/templates/user-list.html
+++ b/user-manager/templates/user-list.html
@@ -17,18 +17,18 @@
     </thead>
 
     <tbody>
-      <tr>
+      <tr ng-repeat="user in usersCtrl.users">
         <td>
-          Arun
+          {{user.first_name}}
         </td>
         <td>
-          Sood
+          {{user.last_name}}
         </td>
         <td>
-          arsood
+          {{user.username}}
         </td>
         <td>
-          arsood@gmail.com
+          {{user.email}}
         </td>
         <td>
           <a href="#" class="btn btn-primary">Edit</a>
@@ -41,40 +41,53 @@
 <div id="add-user-modal" class="modal fade">
   <div class="modal-dialog">
     <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-        <h4 class="modal-title">Add a User</h4>
-      </div>
-      <div class="modal-body">
-        <div class="bold">
-          First Name
+      <form ng-submit="usersCtrl.submitUser($event);">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+          <h4 class="modal-title">Add a User</h4>
         </div>
-        <div class="margin-top-20">
-          <input name="firstname" type="text" class="form-control" placeholder="First Name" />
+        <div class="modal-body">
+          <div class="bold">
+            First Name
+          </div>
+          <div class="margin-top-20">
+            <input name="firstname" type="text" class="form-control" placeholder="First Name" 
+              ng-model="usersCtrl.user.first_name"/>
+          </div>
+          <div class="bold margin-top-20">
+            Last Name
+          </div>
+          <div class="margin-top-20">
+            <input name="lastname" type="text" class="form-control" placeholder="Last Name" 
+              ng-model="usersCtrl.user.last_name" />
+          </div>
+          <div class="bold margin-top-20">
+            Username
+          </div>
+          <div class="margin-top-20">
+            <input name="username" type="text" class="form-control" placeholder="Username" 
+              ng-model="usersCtrl.user.username" />
+          </div>
+          <div class="bold margin-top-20">
+            Email
+          </div>
+          <div class="margin-top-20">
+            <input name="email" type="text" class="form-control" placeholder="Email" 
+              ng-model="usersCtrl.user.email" />
+          </div>
+          <div class="bold margin-top-20">
+            Password
+          </div>
+          <div class="margin-top-20">
+            <input name="password" type="text" class="form-control" placeholder="Password" 
+              ng-model="usersCtrl.user.password" />
+          </div>
         </div>
-        <div class="bold margin-top-20">
-          Last Name
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <button type="submit" class="btn btn-primary">Save User</button>
         </div>
-        <div class="margin-top-20">
-          <input name="lastname" type="text" class="form-control" placeholder="Last Name" />
-        </div>
-        <div class="bold margin-top-20">
-          Username
-        </div>
-        <div class="margin-top-20">
-          <input name="username" type="text" class="form-control" placeholder="Username" />
-        </div>
-        <div class="bold margin-top-20">
-          Email
-        </div>
-        <div class="margin-top-20">
-          <input name="email" type="text" class="form-control" placeholder="Email" />
-        </div>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="submit" class="btn btn-primary">Save User</button>
-      </div>
+      </form> <!-- /.form -->
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
