--- a/user-manager/templates/login.html
+++ b/user-manager/templates/login.html
@@ -23,7 +23,7 @@
       </div>
       <div class="margin-top-20 txt-right">
         <a href="#" class="btn btn-default">Cancel</a>
-        <button type="submit" class="btn btn-primary">Edit User</button>
+        <button type="submit" class="btn btn-primary">Login</button>
       </div>
     </div>
   </div>
